<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/baseLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:keepScreenOn="true"
    android:orientation="vertical">

    <TableLayout
        android:id="@+id/lcontact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rtname" />

            <EditText
                android:id="@+id/tbname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:singleLine="true" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tadresse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rtadresse" />

            <EditText
                android:id="@+id/tbadresse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/ttelnr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rttelnr" />

            <EditText
                android:id="@+id/tbtel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:singleLine="true" />
        </TableRow>

    </TableLayout>

    <com.schulz_kittler.florian.devil_or_saint.camera.CameraSourcePreview
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.schulz_kittler.florian.devil_or_saint.camera.GraphicOverlay
            android:id="@+id/faceOverlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="onClickPicture"/>

    </com.schulz_kittler.florian.devil_or_saint.camera.CameraSourcePreview>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDevil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@android:color/holo_red_light"
            android:onClick="onClickDevil"
            android:text="@string/rbtnDevil" />

        <Space
            android:layout_width="15dp"
            android:layout_height="match_parent"
            android:layout_weight="0" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@android:drawable/ic_menu_edit"
            android:onClick="onClickEdit"
            android:visibility="invisible" />

        <Space
            android:layout_width="15dp"
            android:layout_height="match_parent"
            android:layout_weight="0" />

        <Button
            android:id="@+id/btnDone"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@android:drawable/ic_menu_send"
            android:onClick="onClickDone"
            android:visibility="invisible" />

        <Space
            android:layout_width="15dp"
            android:layout_height="match_parent"
            android:layout_weight="0" />

        <Button
            android:id="@+id/btnSaint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@android:color/holo_orange_light"
            android:onClick="onClickSaint"
            android:text="@string/rbtnSaint" />
    </LinearLayout>
</LinearLayout>